--- a/bc-react/src/App.css
+++ b/bc-react/src/App.css
@@ -1,24 +1,42 @@
-.App {
+.Header {
   text-align: center;
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
+h2 {
+  font-family: 'Amatic SC', cursive;
+  font-size: 100px;
+  color: fuchsia;
+  margin-top: -9px;
+  text-decoration: none;
+  border-bottom: 10px solid black;
+
+  }
+
+
+/*.Header-logo {
+  animation: Header-logo-spin infinite 20s linear;
   height: 80px;
-}
+}*/
 
-.App-header {
-  background-color: #222;
-  height: 150px;
-  padding: 20px;
+.Header-header {
+  background-color: #c122bc;
+  max-height: 1000px;
+  max-width: 150px;
+  min-height: 1000px;
+  min-width: 150px;
+  padding: 40px;
   color: white;
+  margin-bottom: -1000px;
+
 }
 
-.App-intro {
+
+
+.Header-intro {
   font-size: large;
 }
 
-@keyframes App-logo-spin {
+@keyframes Header-logo-spin {
   from { transform: rotate(0deg); }
   to { transform: rotate(360deg); }
 }
