--- a/bc-react/src/style/app.css
+++ b/bc-react/src/style/app.css
@@ -1,6 +1,7 @@
 @import url('https://fonts.googleapis.com/css?family=Dancing+Script');
 @import url('https://fonts.googleapis.com/css?family=Abel');
 @import url('./admin_page.css');
+@import url('./messageboard.css');
 @import url('./header.css');
 @import url('./search_bar.css');
 @import url('./user_listing.css');
