--- a/bc-react/src/style/header.css
+++ b/bc-react/src/style/header.css
@@ -16,7 +16,7 @@ h2 {
 }*/
 
 .Header-header {
-  background-color: rgb(255,146,255);
+
   max-height: 1000px;
   max-width: 150px;
   min-height: 1000px;
@@ -69,7 +69,10 @@ html { height: 100%;}
     margin-left: -220px;
     overflow-y: auto;
     overflow-x: hidden;
-    background: #1a1a1a;
+    background: rgba(255,0,255,.6);
+    border-right: solid .5px black;
+    border-bottom: solid .5px black;
+    border-top: solid .5px black;
     -webkit-transition: all 0.5s ease;
     -moz-transition: all 0.5s ease;
     -o-transition: all 0.5s ease;
@@ -146,16 +149,7 @@ html { height: 100%;}
     background-color: #279636;
 }
 .sidebar-nav li:nth-child(6):before {
-    background-color: #7d5d81;
-}
-.sidebar-nav li:nth-child(7):before {
-    background-color: #ead24c;
-}
-.sidebar-nav li:nth-child(8):before {
-    background-color: #2d2366;
-}
-.sidebar-nav li:nth-child(9):before {
-    background-color: #35acdf;
+    background-color: #888;
 }
 .sidebar-nav li:hover:before,
 .sidebar-nav li.open:hover:before {
@@ -328,6 +322,6 @@ html { height: 100%;}
     left: 0;
     right: 0;
     bottom: 0;
-    background-color: rgba(250,250,250,.8);
+    background-color: rgba(250,250,250,.5);
     z-index: 1;
 }
