--- a/bc-react/src/style/app.css
+++ b/bc-react/src/style/app.css
@@ -1,12 +1,14 @@
 @import url('https://fonts.googleapis.com/css?family=Dancing+Script');
 @import url('https://fonts.googleapis.com/css?family=Abel');
-@import url('./messageboard.css');
+@import url('./MessageBoard.css');
 @import url('./AdminPage.css');
 @import url('./Header.css');
 @import url('./SearchBar.css');
 @import url('./UserListing.css');
 @import url('./Icons.css');
-@import url('./SignUpPage.css');
+@import url('./Forms.css');
+@import url('./SplashPage.css');
+@import url('./Places.css');
 
 .FontAmatic {
   font-family: 'Amatic SC';
@@ -16,19 +18,15 @@
   margin-top: 30px;
 }
 
-.center{
+.center {
   text-align: center;
 }
 
-.BackButton {
-  color: black;
-  font-family: 'Abel';
+h3 {
+  font-family: 'Dancing Script';
   text-align: center;
-  font-size: 19px;
+  font-size: 52px;
+  font-style: italic;
+  font-weight: bold;
+  margin-top: -8px;
 }
-
-/* this code center-aligns the placeholder text in our forms for multiple browser/verisons */
-::-webkit-input-placeholder {text-align: center;}
-:-moz-placeholder {/* older Firefox*/text-align: center;}
-::-moz-placeholder { /* Firefox 19+ */ text-align: center;}
-:-ms-input-placeholder {text-align: center;}
