omfg so much progress on the admin page!

--- a/bc-react/src/style/SearchBar.css
+++ b/bc-react/src/style/SearchBar.css
@@ -6,3 +6,9 @@
   display: inline-block;
   width: 760px;
 }
+
+#invisible {
+  background-color: white;
+  color: white;
+  border-color: white;
+}
