--- a/bc-react/src/style/Home.css
+++ b/bc-react/src/style/Home.css
@@ -1,3 +1,6 @@
+body{
+  overflow: hidden;
+}
 .home-page{
   text-align: center;
   margin-left: 220px;
@@ -10,10 +13,12 @@
   width: 100%
 }*/
 .calendar-div{
-  background-color: rgba(113, 170, 208,0.7);
-  border: 2px solid black;
-  border-radius: 20px;
-  width: 100%;
+  background-color: rgba(0, 0, 0, .5);
+  border: 2px solid rgba(0, 0, 0, .5);
+  /*border-radius: 20px;*/
+  box-shadow: 2px 2px 2px 2px;
+  text-align: center;
+  /*width: 100%;*/
   height: 500px;
   padding: 50px;
   font-family: 'Amatic SC', cursive;
@@ -22,3 +27,20 @@
   margin-bottom: 50px;
   font-weight: bold;
 }
+.hr-home{
+  width: 80%;
+}
+/*.col-xs-6{
+  background-color: red;
+}
+.col-xs-3{
+  background-color: blue;
+  height: 50px;
+}
+.col-xs-1{
+  background-color: purple;
+  height: 50px;
+}
+.col-xs-8{
+  background-color: yellow;
+}*/
