--- a/bc-react/src/style/Sidebar.css
+++ b/bc-react/src/style/Sidebar.css
@@ -1,22 +1,85 @@
+#wrapper.toggled #sidebar-wrapper {
+    width: 220px;
+    overflow: hidden;
+}
 .navbar{
   text-align: center;
+}
+.hamburger {
+    position: fixed;
+    top: 20px;
+    z-index: 999;
+    display: block;
+    width: 32px;
+    height: 32px;
+    margin-left: -38px;
+    background: transparent;
+    border: none;
 }
 .hamburger.is-open .hamb-top, .hamburger.is-open .hamb-bottom {
     top: 50%;
     margin-top: 0px;
-    margin-left: -50px;
+    margin-left: 0px;
     z-index: 1;
+    background: transparent;
 }
 .side-bar-image{
   width: 150px;
   height: 150px;
   /*background-color: black;*/
   margin-top: 0px;
-  margin-bottom: 70px;
+  margin-bottom: 0px;
   margin-left: 10px;
 }
+.side-bar-image-div:hover .image-text-1{
+  display: block;
+}
+.side-bar-image-div:hover .image-text-2{
+  display: block;
+}
+.side-bar-image-div:hover .image-text-3{
+  display: block;
+}
+.image-text-1{
+  /*border: 1px solid #ccc;*/
+  display: none;
+  font-size: 10px;
+  padding-top: 35px;
+  text-transform: uppercase;
+  margin-top: -30px;
+  margin-left: 0px;
+  font-size: 40px;
+  line-height: 1px;
+  height: 50px;
+}
+
+.image-text-2{
+  /*border: 1px solid #ccc;*/
+  display: none;
+  font-size: 10px;
+  padding-top: 35px;
+  text-transform: uppercase;
+  margin-top: -30px;
+  margin-left: 0px;
+  font-size: 40px;
+  line-height: 1px;
+  height: 50px;
+}
+.image-text-3{
+  /*border: 1px solid #ccc;*/
+  display: none;
+  font-size: 10px;
+  padding-top: 35px;
+  text-transform: uppercase;
+  margin-top: -30px;
+  margin-left: 0px;
+  font-size: 40px;
+  line-height: 1px;
+  height: 50px;
+}
+
 .top-image{
-  margin-top: 50px;
+  margin-top: 40px;
 }
 .side-bar-text-top{
   font-family: 'Amatic SC', cursive;
@@ -33,5 +96,110 @@
   margin-left: -10px;
 }
 .side-bar-bottom{
-  margin-bottom: 30px;
+  margin-top: 30px;
+  margin-bottom: 60px;
+}
+.sidebar-nav li:nth-child(2):before {
+    background-color: rgba(0, 0, 0, 0);
+}
+.sidebar-nav li:nth-child(3):before {
+    background-color: rgba(0, 0, 0, 0);
+}
+.sidebar-nav li:nth-child(4):before {
+    background-color: rgba(0, 0, 0, 0);
+}
+.sidebar-nav li:first-child a {
+    color: #fff;
+    background-color: rgba(0, 0, 0, 0);
+}
+.sidebar-nav li:before {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: -1;
+    height: 100%;
+    width: 3px;
+    background-color: rgba(0, 0, 0, 0);
+    -webkit-transition: width .2s ease-in;
+    -o-transition: width .2s ease-in;
+    transition: width .2s ease-in;
+}
+@-webkit-keyframes wobble {
+  16.65% {
+    -webkit-transform: translateY(8px);
+    transform: translateY(8px);
+  }
+  33.3% {
+    -webkit-transform: translateY(-6px);
+    transform: translateY(-6px);
+  }
+  49.95% {
+    -webkit-transform: translateY(4px);
+    transform: translateY(4px);
+  }
+  66.6% {
+    -webkit-transform: translateY(-2px);
+    transform: translateY(-2px);
+  }
+  83.25% {
+    -webkit-transform: translateY(1px);
+    transform: translateY(1px);
+  }
+  100% {
+    -webkit-transform: translateY(0);
+    transform: translateY(0);
+  }
+}
+
+@keyframes wobble {
+  16.65% {
+    -webkit-transform: translateY(8px);
+    -ms-transform: translateY(8px);
+    transform: translateY(8px);
+  }
+  33.3% {
+    -webkit-transform: translateY(-6px);
+    -ms-transform: translateY(-6px);
+    transform: translateY(-6px);
+  }
+  49.95% {
+    -webkit-transform: translateY(4px);
+    -ms-transform: translateY(4px);
+    transform: translateY(4px);
+  }
+  66.6% {
+    -webkit-transform: translateY(-2px);
+    -ms-transform: translateY(-2px);
+    transform: translateY(-2px);
+  }
+  83.25% {
+    -webkit-transform: translateY(1px);
+    -ms-transform: translateY(1px);
+    transform: translateY(1px);
+  }
+  100% {
+    -webkit-transform: translateY(0);
+    -ms-transform: translateY(0);
+    transform: translateY(0);
+  }
+}
+
+.wobble {
+  display: inline-block;
+  -webkit-transform: translateZ(0);
+  -ms-transform: translateZ(0);
+  transform: translateZ(0);
+  box-shadow: 0 0 1px rgba(0, 0, 0, 0);
+}
+
+.wobble:hover {
+  -webkit-animation-name: wobble;
+  animation-name: wobble;
+  -webkit-animation-duration: 1s;
+  animation-duration: 1s;
+  -webkit-animation-timing-function: ease-in-out;
+  animation-timing-function: ease-in-out;
+  -webkit-animation-iteration-count: 1;
+  animation-iteration-count: 1;
 }
