--- a/bc-react/src/style/app.css
+++ b/bc-react/src/style/app.css
@@ -1,11 +1,11 @@
 @import url('https://fonts.googleapis.com/css?family=Dancing+Script');
 @import url('https://fonts.googleapis.com/css?family=Abel');
-@import url('./MessageBoard.css');
+@import url('./messageboard.css');
 @import url('./AdminPage.css');
 @import url('./header.css');
 @import url('./SearchBar.css');
 @import url('./UserListing.css');
-@import url('./Icons.css');
+@import url('./icons.css');
 @import url('./Forms.css');
 @import url('./SplashPage.css');
 @import url('./Places.css');
