--- a/bc-react/src/style/app.css
+++ b/bc-react/src/style/app.css
@@ -1,12 +1,12 @@
 @import url('https://fonts.googleapis.com/css?family=Dancing+Script');
 @import url('https://fonts.googleapis.com/css?family=Abel');
-@import url('./Messageboard.css');
+@import url('./messageboard.css');
 @import url('./AdminPage.css');
-@import url('./Header.css');
+@import url('./header.css');
 @import url('./SearchBar.css');
 @import url('./UserListing.css');
-@import url('./Icons.css');
-@import url('./React-big-calendar.css');
+@import url('./icons.css');
+@import url('./react-big-calendar.css');
 @import url('./Home.css');
 @import url('./Forms.css');
 @import url('./SplashPage.css');
