--- a/bc-react/src/style/AdminPage.css
+++ b/bc-react/src/style/AdminPage.css
@@ -51,3 +51,56 @@ table {
 .clicked {
   background-color: #def9a3;
 }
+
+th, td {
+  border: 1px solid black;
+  background-color: #eeeeee;
+  border-color: #c1c1c1;
+  border-width: thin;
+  text-align: center;
+  text-decoration: none;
+  font-family: 'Abel';
+  font-size: 20px;
+  padding-left: 5px;
+  padding-right: 5px;
+}
+
+
+.table_icons {
+  background-color: white;
+  border: none;
+}
+
+#edit_icon {
+  width: 30px;
+  height: 30px;
+  margin-top: -45px;
+  margin-left: -12px;
+  border-color: white;
+}
+
+#delete_icon {
+  width: 30px;
+  height: 30px;
+  margin-top: -45px;
+  margin-left: -3px;
+}
+
+table {
+  margin-top: -15px;
+}
+
+#search_bar_wrapper {
+  font-family: 'Abel';
+  font-size: 20px;
+  border-color: dimgray;
+  text-align: center;
+  display: inline-block;
+  width: 760px;
+}
+
+#invisible {
+  background-color: white;
+  color: white;
+  border-color: white;
+}
