--- a/bc-react/src/style/App.css
+++ b/bc-react/src/style/App.css
@@ -3,15 +3,12 @@
 @import url('./Messageboard.css');
 @import url('./AdminPage.css');
 @import url('./Header.css');
-@import url('./SearchBar.css');
-@import url('./UserListing.css');
-@import url('./Icons.css');
 @import url('./React-big-calendar.css');
 @import url('./Home.css');
 @import url('./Forms.css');
-@import url('./SplashPage.css');
 @import url('./Places.css');
 @import url('./Modal.css');
+@import url('./SplashLoginSignUp.css');
 
 /*goal for centering: create one single div set the width of the elements and the margin around them to auto*/
 
@@ -36,6 +33,6 @@ h3 {
   margin-top: -8px;
 }
 
-.active-button {
-  background-color: #def9a3;
+.black {
+  color: black;
 }
