--- a/bc-react/src/style/AdminPage.css
+++ b/bc-react/src/style/AdminPage.css
@@ -8,6 +8,10 @@
   text-align: center;
 }
 
+.admin-calendar {
+  width: 75%;
+}
+
 .admin_button {
   background-color: #eeeeee;
   border-color: #c1c1c1;
@@ -103,4 +107,20 @@ table {
   background-color: white;
   color: white;
   border-color: white;
+}
+
+.admin-calendar {
+  background-color: rgba(0, 0, 0, .5);
+  border: 2px solid rgba(0, 0, 0, .5);
+  /*border-radius: 20px;*/
+  box-shadow: 2px 2px 2px 2px;
+  text-align: center;
+  /*width: 100%;*/
+  height: 500px;
+  padding: 50px;
+  font-family: 'Amatic SC', cursive;
+  font-size: 50px;
+  margin-top: 50px;
+  margin-bottom: 50px;
+  font-weight: bold;
 }
