--- a/bc-react/src/style/Home.css
+++ b/bc-react/src/style/Home.css
@@ -1,9 +1,32 @@
 body{
   overflow: hidden;
 }
+
+.giphy-div {
+  width:100%;
+  height:0;
+  padding-bottom:73%;
+  position:relative;
+}
+
+.giphy-embed{
+  position: absolute;
+  width height: 100%
+}
+
 .home-page{
   text-align: center;
   margin-left: 220px;
+}
+
+.welcome-message {
+    text-align: center;
+    font-family: 'Abel';
+    border: none;
+    background-color: #def9a3;
+    width: 75%;
+    box-shadow: 0.5px 0.5px 0.5px 0.5px green;
+    font-size: 25px;
 }
 
 /*.container{
@@ -13,7 +36,7 @@ body{
   width: 100%
 }*/
 .calendar-div{
-  background-color: rgba(0, 0, 0, .5);
+  background-color: #eeeeee;
   border: 2px solid rgba(0, 0, 0, .5);
   /*border-radius: 20px;*/
   box-shadow: 2px 2px 2px 2px;
@@ -23,13 +46,13 @@ body{
   padding: 50px;
   font-family: 'Amatic SC', cursive;
   font-size: 50px;
-  margin-top: 50px;
+  margin-top: 30px;
   margin-bottom: 50px;
   font-weight: bold;
 }
-.hr-home{
+/*.hr-home{
   width: 80%;
-}
+}*/
 /*.col-xs-6{
   background-color: red;
 }
