--- a/bc-react/src/style/AdminPage.css
+++ b/bc-react/src/style/AdminPage.css
@@ -12,6 +12,18 @@
   width: 65%;
 }
 
+.admin_button_clicked {
+  background-color: #def9a3;
+  border-color: #c1c1c1;
+  border-width: thin;
+  text-align: center;
+  text-decoration: none;
+  font-family: 'Abel';
+  font-size: 20px;
+  margin-right: 3px;
+  width: 225px;
+}
+
 .admin_button {
   background-color: #eeeeee;
   border-color: #c1c1c1;
@@ -39,14 +51,6 @@
   float: left;
 }
 
-table {
-  width: 831px;
-}
-
-#admin-place-table {
-  width: 950px;
-}
-
 .icon_td {
     background-color: white;
     border: none;
@@ -56,7 +60,7 @@ table {
   background-color: #def9a3;
 }
 
-th, td {
+.admin-th, .admin-td {
   border: 1px solid black;
   background-color: #eeeeee;
   border-color: #c1c1c1;
@@ -78,20 +82,21 @@ th, td {
 #edit_icon {
   width: 30px;
   height: 30px;
-  margin-top: -45px;
-  margin-left: -12px;
+  margin-top: -25px;
+  margin-left: -20px;
   border-color: white;
 }
 
 #delete_icon {
   width: 30px;
   height: 30px;
-  margin-top: -45px;
-  margin-left: -3px;
+  margin-top: -25px;
+  margin-left: -10px;
 }
 
-table {
+.admin-table {
   margin-top: -15px;
+  width: 831px;
 }
 
 #search_bar_wrapper {
