--- a/bc-react/src/style/SearchBar.css
+++ b/bc-react/src/style/SearchBar.css
@@ -1,5 +1,5 @@
 #search_bar_wrapper {
-  font-family: 'Abel';
+  font-family: 'Abel', sans-serif;
   font-size: 20px;
   border-color: dimgray;
   text-align: center;
