--- a/bc-react/src/style/Home.css
+++ b/bc-react/src/style/Home.css
@@ -1,19 +1,15 @@
-body{
-  overflow: hidden;
-}
+
 .home-page{
   text-align: center;
   margin-left: 220px;
 }
 
-/*.container{
-  background-color: gray;
-  margin-left: 250px;
-  margin-right: 30px;
-  width: 100%
+/*.container-home{
+  background-color: blue;
 }*/
+
 .calendar-div{
-  background-color: rgba(0, 0, 0, .5);
+  background-color: #eeeeee;
   border: 2px solid rgba(0, 0, 0, .5);
   /*border-radius: 20px;*/
   box-shadow: 2px 2px 2px 2px;
@@ -21,26 +17,39 @@ body{
   /*width: 100%;*/
   height: 500px;
   padding: 50px;
-  font-family: 'Amatic SC', cursive;
+  font-family: 'Amatic SC', sans-serif, cursive;
   font-size: 50px;
   margin-top: 50px;
   margin-bottom: 50px;
   font-weight: bold;
+  margin-left: 0px;
 }
 .hr-home{
   width: 80%;
 }
-/*.col-xs-6{
+/*.col-xs-7{
   background-color: red;
-}
-.col-xs-3{
+}*/
+/*.col-xs-3{
   background-color: blue;
   height: 50px;
-}
-.col-xs-1{
-  background-color: purple;
+}*/
+/*.col-xs-4{
+  background-color: green;
   height: 50px;
-}
-.col-xs-8{
+}*/
+/*.col-xs-8{
   background-color: yellow;
 }*/
+.rbc-agenda-view table thead > tr > th {
+    padding: 17px 5px;
+    text-align: left;
+    border-bottom: 1px solid #DDD;
+}
+.rbc-ellipsis, .rbc-event-label, .rbc-row-segment .rbc-event-content, .rbc-show-more {
+    display: block;
+    overflow: hidden;
+    -o-text-overflow: ellipsis;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+}
