--- a/bc-react/src/style/Home.css
+++ b/bc-react/src/style/Home.css
@@ -7,7 +7,9 @@
 /*.container-home{
   background-color: blue;
 }*/
-
+.header-line{
+  width: 700px;
+}
 .calendar-div{
   background-color: #eeeeee;
   border: 2px solid rgba(0, 0, 0, .5);
