--- a/bc-react/src/style/SplashLoginSignUp.scss
+++ b/bc-react/src/style/SplashLoginSignUp.scss
@@ -2,13 +2,15 @@
   align-items: center;
   position: relative;
   width: 240px;
-  margin: auto; }
+  margin: auto;
+}
 
 .login-signup-container {
   align-items: center;
   position: relative;
   width: 315px;
-  margin: auto; }
+  margin: auto;
+}
 
 .login, .signup, .let-me-in, .take-me-back {
   width: 50%;
@@ -16,11 +18,13 @@
   overflow: hidden;
   display: inline-block;
   font-family: 'Amatic SC';
-  color: black; }
+  color: black;
+}
 
 .let-me-in, .take-me-back {
   font-family: 'Amatic SC';
   font-size: 35px;
   text-align: center;
   color: black;
-  margin-top: 30px; }
+  margin-top: 30px;
+}
