--- a/bc-react/src/style/AdminPage.scss
+++ b/bc-react/src/style/AdminPage.scss
@@ -1,13 +1,19 @@
 #admin_container {
   text-align: center;
-  padding: none; }
-  #admin_container #admin_button_wrapper {
+  padding: none;
+
+  // text-align: center;
+  #admin_button_wrapper {
     margin: auto;
     display: block;
-    text-align: center; }
-  #admin_container .admin-calendar {
-    width: 65%; }
-  #admin_container .admin_button_clicked {
+    text-align: center;
+  }
+
+  .admin-calendar {
+    width: 65%;
+  }
+
+  .admin_button_clicked {
     background-color: #def9a3;
     border-color: #c1c1c1;
     border-width: thin;
@@ -16,8 +22,10 @@
     font-family: 'Abel';
     font-size: 20px;
     margin-right: 3px;
-    width: 225px; }
-  #admin_container .admin_button {
+    width: 225px;
+  }
+
+  .admin_button {
     background-color: #eeeeee;
     border-color: #c1c1c1;
     border-width: thin;
@@ -26,8 +34,10 @@
     font-family: 'Abel';
     font-size: 20px;
     margin-right: 3px;
-    width: 225px; }
-  #admin_container .add_button {
+    width: 225px;
+  }
+
+  .add_button {
     display: inline-block;
     background-color: #eeeeee;
     border-color: #c1c1c1;
@@ -39,21 +49,31 @@
     padding-left: 22px;
     padding-right: 22px;
     margin-left: 3px;
-    float: left; }
-  #admin_container .add_button:hover {
-    background-color: #def9a3; }
-  #admin_container .icon_td {
-    background-color: white;
-    border: none; }
-  #admin_container .editable {
+    float: left;
+  }
+
+  .add_button:hover {
+    background-color: #def9a3;
+  }
+
+  .icon_td {
+      background-color: white;
+      border: none;
+  }
+
+  .editable {
     font-style: italic;
     color: fuchsia;
-    text-shadow: 0.1px 0.1px black; }
-  #admin_container .read-only {
+    text-shadow: 0.1px 0.1px black;
+  }
+
+  .read-only {
     font-style: normal;
     color: black;
-    text-shadow: none; }
-  #admin_container .admin-th, #admin_container .admin-td {
+    text-shadow: none;
+  }
+
+  .admin-th, .admin-td {
     border: 1px solid black;
     background-color: #eeeeee;
     border-color: #c1c1c1;
@@ -64,52 +84,75 @@
     padding-left: 5px;
     padding-right: 5px;
     white-space: nowrap;
-    overflow: hidden; }
-  #admin_container tr td {
+    overflow: hidden;
+  }
+
+  tr td {
     background-color: #eeeeee;
-    padding: none; }
-  #admin_container td {
+    padding: none;
+  }
+
+  td{
     border: 1px solid black;
-    border-color: #c1c1c1; }
-    #admin_container td input {
-      border: none;
-      background-color: transparent;
-      border: none;
-      margin: 0;
-      text-align: center; }
-  #admin_container .table_icons {
+    border-color: #c1c1c1;
+
+      input {
+        border: none;
+        background-color: transparent;
+        border: none;
+        margin: 0;
+        text-align: center;
+      }
+  }
+
+
+  .table_icons {
     background-color: white;
-    border: none; }
-  #admin_container #edit_icon {
+    border: none;
+  }
+
+  #edit_icon {
     width: 30px;
     height: 30px;
     margin-top: -25px;
     margin-left: -20px;
-    border-color: white; }
-  #admin_container #delete_icon {
+    border-color: white;
+  }
+
+  #delete_icon {
     width: 28px;
     height: 28px;
     margin-top: -25px;
-    margin-left: -10px; }
-  #admin_container #edit_icon:hover, #admin_container #delete_icon:hover {
-    cursor: pointer; }
-  #admin_container .admin-table {
+    margin-left: -10px;
+  }
+
+  #edit_icon:hover, #delete_icon:hover {
+    cursor: pointer;
+  }
+
+  .admin-table {
     margin-top: -15px;
-    width: 831px; }
-  #admin_container #search_bar_wrapper {
+    width: 831px;
+  }
+
+  #search_bar_wrapper {
     font-family: 'Abel';
     font-size: 20px;
     border-color: dimgray;
     text-align: center;
     display: inline-block;
-    width: auto; }
-  #admin_container #invisible {
+    width: auto;
+  }
+
+  #invisible {
     background-color: white;
     color: white;
-    border-color: white; }
-  #admin_container .admin-calendar {
-    background-color: rgba(0, 0, 0, 0.5);
-    border: 2px solid rgba(0, 0, 0, 0.5);
+    border-color: white;
+  }
+
+  .admin-calendar {
+    background-color: rgba(0, 0, 0, .5);
+    border: 2px solid rgba(0, 0, 0, .5);
     /*border-radius: 20px;*/
     box-shadow: 2px 2px 2px 2px;
     text-align: center;
@@ -120,4 +163,7 @@
     font-size: 50px;
     margin-top: 50px;
     margin-bottom: 50px;
-    font-weight: bold; }
+    font-weight: bold;
+  }
+
+}
