--- a/bc-react/src/style/App.scss
+++ b/bc-react/src/style/App.scss
@@ -1,37 +1,43 @@
-@import url("https://fonts.googleapis.com/css?family=Dancing+Script");
-@import url("https://fonts.googleapis.com/css?family=Abel");
-@import url("./Messageboard.css");
-@import url("./AdminPage.css");
-@import url("./Header.css");
-@import url("./React-big-calendar.css");
-@import url("./Home.css");
-@import url("./Forms.css");
-@import url("./Places.css");
-@import url("./Modal.css");
-@import url("./SplashLoginSignUp.css");
+@import url('https://fonts.googleapis.com/css?family=Dancing+Script');
+@import url('https://fonts.googleapis.com/css?family=Abel');
+@import url('./Messageboard.css');
+@import url('./AdminPage.css');
+@import url('./Header.css');
+@import url('./React-big-calendar.css');
+@import url('./Home.css');
+@import url('./Forms.css');
+@import url('./Places.css');
+@import url('./Modal.css');
+@import url('./SplashLoginSignUp.css');
+
 /*goal for centering: create one single div set the width of the elements and the margin around them to auto*/
+
 /*if we want anything centered:*/
 /*body {
     display: flex;
     justify-content: center;
     align-items: center;
 }*/
+
 .wrapper {
   font-size: 100%;
   position: absolute;
   height: 100%;
   width: 100%;
-  overflow: scroll; }
+  overflow: scroll;
+}
 
 .FontAmatic {
   font-family: 'Amatic SC';
   font-size: 40px;
   text-align: center;
   color: black;
-  margin-top: 30px; }
+  margin-top: 30px;
+}
 
 .center {
-  text-align: center; }
+  text-align: center;
+}
 
 h3 {
   font-family: 'Dancing Script';
@@ -39,10 +45,13 @@ h3 {
   font-size: 52px;
   font-style: italic;
   font-weight: bold;
-  margin-top: -8px; }
+  margin-top: -8px;
+}
 
 .black {
-  color: black; }
+  color: black;
+}
 
 button:hover {
-  background-color: #def9a3; }
+  background-color: #def9a3;
+}
