--- a/bc-react/src/style/Forms.css
+++ b/bc-react/src/style/Forms.css
@@ -2,23 +2,29 @@
   text-align: center;
   font-family: 'Amatic SC';
   font-size: 35px;
-  color: black;
-}
+  color: black; }
 
 form {
   text-align: center;
   font-family: 'Abel';
-  font-size: 20px;
-}
+  font-size: 20px; }
 
 #sign_up {
   text-align: center;
   font-family: 'Amatic SC';
-  font-size: 40px;
-}
+  font-size: 40px; }
 
 /* this code center-aligns the placeholder text in our forms for multiple browser/verisons */
-::-webkit-input-placeholder {text-align: center;}
-:-moz-placeholder {/* older Firefox*/text-align: center;}
-::-moz-placeholder { /* Firefox 19+ */ text-align: center;}
-:-ms-input-placeholder {text-align: center;}
+::-webkit-input-placeholder {
+  text-align: center; }
+
+:-moz-placeholder {
+  /* older Firefox*/
+  text-align: center; }
+
+::-moz-placeholder {
+  /* Firefox 19+ */
+  text-align: center; }
+
+:-ms-input-placeholder {
+  text-align: center; }
