--- a/bc-react/src/style/Header.scss
+++ b/bc-react/src/style/Header.scss
@@ -1,19 +1,22 @@
 .Header {
-  text-align: center; }
+  text-align: center;
+}
 
 h2, calendar-div, home-page {
   font-family: 'Amatic SC', cursive;
   font-size: 100px;
   color: fuchsia;
   margin-top: -9px;
-  font-weight: bold; }
+  font-weight: bold;
+  }
 
 .Header-logo {
   animation: Header-logo-spin infinite 20s linear;
-  height: 80px; }
+  height: 80px;
+}
+
 
 @keyframes Header-logo-spin {
-  from {
-    transform: rotate(0deg); }
-  to {
-    transform: rotate(360deg); } }
+  from { transform: rotate(0deg); }
+  to { transform: rotate(360deg); }
+}
