--- a/bc-react/src/style/Home.scss
+++ b/bc-react/src/style/Home.scss
@@ -1,29 +1,34 @@
-body {
-  overflow: hidden; }
+body{
+  overflow: hidden;
+}
 
 .giphy-div {
-  width: 100%;
-  height: 0;
-  padding-bottom: 73%;
-  position: relative; }
+  width:100%;
+  height:0;
+  padding-bottom:73%;
+  position:relative;
+}
 
-.giphy-embed {
+.giphy-embed{
   position: absolute;
   width: 100%;
-  height: 100%; }
+  height: 100%;
+}
 
-.home-page {
+.home-page{
   text-align: center;
-  margin-left: 220px; }
+  margin-left: 220px;
+}
 
 .welcome-message {
-  text-align: center;
-  font-family: 'Abel';
-  border: none;
-  background-color: #def9a3;
-  width: 75%;
-  box-shadow: 0.5px 0.5px 0.5px 0.5px green;
-  font-size: 25px; }
+    text-align: center;
+    font-family: 'Abel';
+    border: none;
+    background-color: #def9a3;
+    width: 75%;
+    box-shadow: 0.5px 0.5px 0.5px 0.5px green;
+    font-size: 25px;
+}
 
 /*.container{
   background-color: gray;
@@ -31,9 +36,9 @@ body {
   margin-right: 30px;
   width: 100%
 }*/
-.calendar-div {
+.calendar-div{
   background-color: #eeeeee;
-  border: 2px solid rgba(0, 0, 0, 0.5);
+  border: 2px solid rgba(0, 0, 0, .5);
   /*border-radius: 20px;*/
   box-shadow: 2px 2px 2px 2px;
   text-align: center;
@@ -44,8 +49,8 @@ body {
   font-size: 50px;
   margin-top: 30px;
   margin-bottom: 50px;
-  font-weight: bold; }
-
+  font-weight: bold;
+}
 /*.hr-home{
   width: 80%;
 }*/
