--- a/bc-react/src/style/Modal.scss
+++ b/bc-react/src/style/Modal.scss
@@ -2,7 +2,8 @@
   position: fixed;
   top: 50%;
   left: 50%;
-  z-index: 1010; }
+  z-index: 1010;
+}
 
 #modal-overlay {
   z-index: 1000;
@@ -10,4 +11,5 @@
   top: 0;
   left: 0;
   width: 100%;
-  height: 100%; }
+  height: 100%;
+}
