fixes for css merge

--- a/bc-react/src/style/Messageboard.scss
+++ b/bc-react/src/style/Messageboard.scss
@@ -31,6 +31,14 @@
   text-align: right;
   font-size: 20px;
 }
-.submit-field{
+  }
   margin-top: 20px;
+  width: 200px;
+  margin-left: -300px;
+}
+
+.submit-field-button{
+  width: 50px;
+  margin-top: -65px;
+  margin-left: -80px;
 }
