--- a/bc-react/src/style/Places.scss
+++ b/bc-react/src/style/Places.scss
@@ -29,6 +29,14 @@ li {
   margin-left: -30px;
   margin-top: 5px;
 }
+.list-background{
+  background-color: #eeeeee;
+  border: 2px solid rgba(0, 0, 0, .5);
+}
+.place-header{
+  font-size: 100px;
+}
+
 .fields{
   text-align: left;
   border: 0.5px solid black;
@@ -36,7 +44,7 @@ li {
   letter-spacing: 1px;
 }
 .list{
-  margin: 50px;
+  margin: 30px;
   /*background-color: red;*/
   width: 350px;
 
