restored gabe's styling

--- a/bc-react/src/style/Forms.scss
+++ b/bc-react/src/style/Forms.scss
@@ -1,19 +1,19 @@
 .align-button {
   text-align: center;
-  font-family: 'Amatic SC';
+  font-family: 'Amatic SC', sans-serif;
   font-size: 35px;
   color: black;
 }
 
 form {
   text-align: center;
-  font-family: 'Abel';
+  font-family: 'Abel', sans-serif;
   font-size: 20px;
 }
 
 #sign_up {
   text-align: center;
-  font-family: 'Amatic SC';
+  font-family: 'Amatic SC', sans-serif;
   font-size: 40px;
 }
 
