--- a/bc-react/src/style/Places.scss
+++ b/bc-react/src/style/Places.scss
@@ -1,5 +1,5 @@
 #place-h2 {
-  font-family: 'Amatic SC', cursive;
+  font-family: 'Amatic SC', sans-serif, cursive;
   font-size: 100px;
   color: fuchsia;
   margin-top: -9px;
@@ -20,7 +20,7 @@ ul {
   list-style-type: none;
   width: 395px;
   box-shadow: 2px 2px 2px 2px;
-  font-family: 'Amatic SC', cursive;
+  font-family: 'Amatic SC', sans-serif, cursive;
   font-size: 30px;
   margin-left: 50px;
 }
