--- a/bc-react/src/style/Home.scss
+++ b/bc-react/src/style/Home.scss
@@ -1,7 +1,3 @@
-body{
-  overflow: hidden;
-}
-
 .giphy-div {
   width:100%;
   height:0;
@@ -45,10 +41,11 @@ body{
   /*width: 100%;*/
   height: 500px;
   padding: 50px;
-  font-family: 'Amatic SC', cursive;
+  font-family: 'Amatic SC', sans-serif, cursive;
   font-size: 50px;
   margin-top: 30px;
   margin-bottom: 50px;
+  margin-left: 0px;
   font-weight: bold;
 }
 /*.hr-home{
@@ -68,3 +65,16 @@ body{
 .col-xs-8{
   background-color: yellow;
 }*/
+
+.rbc-agenda-view table thead > tr > th {
+  padding: 17px 5px;
+  text-align: left;
+  border-bottom: 1px solid #DDD;
+ }
+.rbc-ellipsis, .rbc-event-label, .rbc-row-segment .rbc-event-content, .rbc-show-more {
+  display: block;
+  overflow: hidden;
+  -o-text-overflow: ellipsis;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+}
