reduced sidebar code to essentials

--- a/bc-react/src/style/App.scss
+++ b/bc-react/src/style/App.scss
@@ -9,6 +9,7 @@
 @import url('./Places.css');
 @import url('./Modal.css');
 @import url('./SplashLoginSignUp.css');
+@import url('./Sidebar.css');
 
 /*goal for centering: create one single div set the width of the elements and the margin around them to auto*/
 
