styling issues for the splash page https://app.asana.com/0/374477614410350/374537735489766

--- a/bc-react/src/style/SplashPage.scss
+++ b/bc-react/src/style/SplashPage.scss
@@ -1,38 +1,22 @@
-/*#splash-container {
-  align-items: center;
-  position: relative;
-  width: 240px;
-  margin: auto;
-}*/
-/*.login {
-  width: 50%;
-  text-align: center;
-  overflow: hidden;
-  display: inline-block;
-}*/
-/*.signup {
-  width: 50%;
-  text-align: center;
-  overflow: hidden;
-  display: inline-block;
-}*/
-h2{
-  /*background-color: blue;*/
-  margin-right: 220px;
-}
-.container{
-/*background-color: gray*/
-}
-.col-xs-5{
-  /*border: 2px solid black;*/
-  height: 60px;
-  /*background-color: red;*/
-}
-.col-xs-1{
-  /*border: 2px solid black;*/
-  height: 60px;
-  /*background-color: red;*/
-}
+// #splash-container {
+//   align-items: center;
+//   position: relative;
+//   width: 240px;
+//   margin: auto;
+// }
+// .login {
+//   width: 50%;
+//   text-align: center;
+//   overflow: hidden;
+//   display: inline-block;
+// }
+// .signup {
+//   width: 50%;
+//   text-align: center;
+//   overflow: hidden;
+//   display: inline-block;
+// }
+
 .coverflow__container__1P-xE {
     position: relative;
     background: rgba(0, 0, 0, 0.69);
