--- a/bc-react/src/style/UserLogin.scss
+++ b/bc-react/src/style/UserLogin.scss
@@ -1,7 +1,3 @@
-.link-font {
-    font-family: 'Amatic SC', sans-serif;
-    font-size: 40px;
-    text-align: center;
-    color: black;
-    margin-top: 30px;
+.login-field-verification img {
+  width: 600px
 }
