--- a/bc-react/src/style/UserSignup.scss
+++ b/bc-react/src/style/UserSignup.scss
@@ -1,8 +1,8 @@
-.container{
-  display: flex;
-  /*background-color: blue;*/
-  justify-content: center;
-}
+// .container{
+//   display: flex;
+//   /*background-color: blue;*/
+//   justify-content: center;
+// }
 h2 {
     font-family: 'Amatic SC', sans-serif, cursive;
     font-size: 130px;
