--- a/bc-react/src/style/Header.scss
+++ b/bc-react/src/style/Header.scss
@@ -3,18 +3,9 @@
 
     h2 {
       font-family: 'Amatic SC', sans-serif;
-      font-size: 100px;
+      font-size: 7.5em;
       color: fuchsia;
-      margin-top: -9px;
       font-weight: bold;
   }
 
 }
-// .Header-header {
-//
-//   max-height: 1000px;
-//   max-width: 150px;
-//   min-height: 1000px;
-//   min-width: 150px;
-
-// }
