--- a/bc-react/src/style/SplashPage.scss
+++ b/bc-react/src/style/SplashPage.scss
@@ -16,18 +16,25 @@
 //   overflow: hidden;
 //   display: inline-block;
 // }
-
-.coverflow__container__1P-xE {
+.splash-page {
+  .coverflow__container__1P-xE {
+      position: relative;
+      background: rgba(0, 0, 0, 0.69);
+      margin: 0 auto;
+      padding: 0;
+      overflow: hidden;
+  }
+  .FontAmatic {
+      font-family: 'Amatic SC', sans-serif;
+      font-size: 80px;
+      text-align: right;
+      color: black;
+      margin-top: 30px;
+  }
+  .container {
+    align-items: center;
     position: relative;
-    background: rgba(0, 0, 0, 0.69);
-    margin: 0 auto;
-    padding: 0;
-    overflow: hidden;
-}
-.FontAmatic {
-    font-family: 'Amatic SC', sans-serif;
-    font-size: 80px;
-    text-align: center;
-    color: black;
-    margin-top: 30px;
+    width: 240px;
+    margin: auto;
+  }
 }
