--- a/bc-react/src/style/UserSignup.scss
+++ b/bc-react/src/style/UserSignup.scss
@@ -3,41 +3,44 @@
 //   /*background-color: blue;*/
 //   justify-content: center;
 // }
-h2 {
-    font-family: 'Amatic SC', sans-serif, cursive;
-    font-size: 130px;
-    color: fuchsia;
-    margin-top: -9px;
-    font-weight: bold;
-    text-align: center;
-    margin-left: 220px;
-}
-#sign_up {
+
+.signup-page {
+  h2 {
+      font-family: 'Amatic SC', sans-serif, cursive;
+      font-size: 130px;
+      color: fuchsia;
+      margin-top: -9px;
+      font-weight: bold;
+      text-align: center;
+      margin-left: 220px;
+  }
+  .entry-header {
     text-align: center;
     font-family: 'Amatic SC', sans-serif;
-    font-size: 60px;
-}
-form {
-  /*background-color: red;*/
-  width: 500px;
-}
-.form-group {
-  margin-bottom: 0px;
-}
-.link-font{
-  font-size: 40px;
-}
-.bottom-links{
-  margin-top: 50px;
-}
-.help-block {
-    display: block;
-    margin-top: -30px;
-    margin-bottom: 10px;
-    margin-right: -620px;
-    color: #737373;
-}
-.letMeIn{
-  background-color: rgba(255, 0, 0, 0);
-  border-radius: 20px;
-}
+    font-size: 3em;
+  }
+  form {
+    /*background-color: red;*/
+    width: 500px;
+  }
+  .form-group {
+    margin-bottom: 0px;
+  }
+  .link-font{
+    font-size: 40px;
+  }
+  .bottom-links{
+    margin-top: 50px;
+  }
+  .help-block {
+      display: block;
+      margin-top: -30px;
+      margin-bottom: 10px;
+      margin-right: -620px;
+      color: #737373;
+  }
+  .letMeIn{
+    background-color: rgba(255, 0, 0, 0);
+    border-radius: 20px;
+  }
+  }
