sign up page layout

--- a/bc-react/src/style/App.scss
+++ b/bc-react/src/style/App.scss
@@ -12,6 +12,7 @@
 @import url('./UserLogin.css');
 @import url('./UserSignUp.css');
 @import url('./UserProfile.css');
+@import url('./SearchBar.css');
 
 /*goal for centering: create one single div set the width of the elements and the margin around them to auto*/
 
