--- a/bc-react/src/style/SplashPage.scss
+++ b/bc-react/src/style/SplashPage.scss
@@ -1,11 +1,11 @@
 .splash-page {
-  .coverflow__container__1P-xE {
-      position: relative;
-      background: rgba(0, 0, 0, 0.69);
-      margin: 0 auto;
-      padding: 0;
-      overflow: hidden;
-  }
+  // .coverflow__container__1P-xE {
+  //     position: relative;
+  //     background: rgba(0, 0, 0, 0.69);
+  //     margin: 0 auto;
+  //     padding: 0;
+  //     overflow: hidden;
+  // }
   .button-container {
     position: relative;
     width: 240px;
