--- a/bc-react/src/style/UserLogin.scss
+++ b/bc-react/src/style/UserLogin.scss
@@ -1,7 +1,9 @@
 .login-page {
   img {
-    width: 300px
+    width: 300px;
+    max-height: 200px;
   }
+  
   .entry-header {
     text-align: center;
     font-family: 'Amatic SC', sans-serif;
