--- a/bc-react/src/style/UserSignup.scss
+++ b/bc-react/src/style/UserSignup.scss
@@ -1,46 +1,50 @@
-// .container{
-//   display: flex;
-//   /*background-color: blue;*/
-//   justify-content: center;
-// }
+.container{
+  display: flex;
+  justify-content: center;
+}
+
+form {
+  width: 500px;
+}
+
+.form-group {
+  margin-bottom: 0px;
+}
+
+.help-block {
+    display: block;
+    margin-top: -30px;
+    margin-bottom: 10px;
+    margin-right: -620px;
+    color: #e22020;
+}
 
 .signup-page {
-  h2 {
-      font-family: 'Amatic SC', sans-serif, cursive;
-      font-size: 130px;
-      color: fuchsia;
-      margin-top: -9px;
-      font-weight: bold;
-      text-align: center;
-      margin-left: 220px;
+  .letMeIn{
+    background-color: rgba(255, 0, 0, 0);
+    border-radius: 20px;
   }
   .entry-header {
     text-align: center;
     font-family: 'Amatic SC', sans-serif;
     font-size: 3em;
   }
-  form {
-    /*background-color: red;*/
-    width: 500px;
+  .button-container {
+    position: relative;
+    width: 340px;
+    margin: auto;
   }
-  .form-group {
-    margin-bottom: 0px;
+  .let-me-in, .take-me-back {
+    width: 50%;
+    text-align: center;
+    display: inline-block;
+    font-family: 'Amatic SC';
+    color: black;
+    font-size: 35px;
+    margin-top: 30px;
   }
-  .link-font{
-    font-size: 40px;
-  }
-  .bottom-links{
-    margin-top: 50px;
-  }
-  .help-block {
-      display: block;
-      margin-top: -30px;
-      margin-bottom: 10px;
-      margin-right: -620px;
-      color: #737373;
-  }
-  .letMeIn{
+  .entry-button {
     background-color: rgba(255, 0, 0, 0);
     border-radius: 20px;
-  }
+    }
   }
