--- a/bc-react/src/style/App.scss
+++ b/bc-react/src/style/App.scss
@@ -22,7 +22,23 @@
     justify-content: center;
     align-items: center;
 }*/
+//get rid of blue outline
+input:focus {
+    outline:none !important;
+}
 
+button:focus {
+    outline:none !important;
+}
+
+.fruit-border {
+  position: fixed;
+  bottom:0;
+  right:0;
+  width: 100%;
+  z-index: -1;
+  opacity: 0.8;
+}
 .FontAmatic {
   font-family: 'Amatic SC';
   font-size: 40px;
@@ -65,4 +81,8 @@ form {
 
 button:hover {
   background-color: #def9a3;
+}
+
+input:-webkit-autofill {
+    -webkit-box-shadow: 0 0 0 1000px white inset !important;
 }
