--- a/bc-react/src/style/UserSignup.scss
+++ b/bc-react/src/style/UserSignup.scss
@@ -1,15 +1,3 @@
-.container{
-  display: flex;
-  justify-content: center;
-}
-
-form {
-  width: 500px;
-}
-
-.form-group {
-  margin-bottom: 0px;
-}
 
 .help-block {
     display: block;
@@ -20,6 +8,19 @@ form {
 }
 
 .signup-page {
+  .container{
+    display: flex;
+    justify-content: center;
+  }
+
+  form {
+    width: 500px;
+  }
+
+  .form-group {
+    margin-bottom: 0px;
+  }
+
   .letMeIn{
     background-color: rgba(255, 0, 0, 0);
     border-radius: 20px;
@@ -44,7 +45,7 @@ form {
     margin-top: 30px;
   }
   .entry-button {
-    background-color: rgba(255, 0, 0, 0);
+    background-color: white;
     border-radius: 20px;
     }
   }
