--- a/bc-react/src/style/App.scss
+++ b/bc-react/src/style/App.scss
@@ -22,7 +22,7 @@
     justify-content: center;
     align-items: center;
 }*/
-//get rid of blue outline
+//get rid of blue outline on links and buttons
 input:focus {
     outline:none !important;
 }
